# ofreg

./: .gitignore  Cargo.toml  build.rs  flake.nix  readme.md
ofreg/: Cargo.toml
ofreg-common/: Cargo.toml
ofreg-common/src/: lib.rs
ofreg/src/: main.rs  time.rs
ofregd/: Cargo.toml  build.rs  config.toml
ofregd/src/: config.rs  db.rs  handle.rs  main.rs  query.rs  store.rs  utils.rs
ofregd/src/bpf/: ofreg.bpf.c
src/: db.rs  distro.rs  handle.rs  main.rs
src/bpf/: ofreg.bpf.c  ofreg.skel.rs  vmlinux.h
