[workspace]
members = ["ofregd", "ofreg", "ofreg-common"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"

[workspace.dependencies]
anyhow = "1.0"
rusqlite = "0.35"
tokio = "1"
ofreg-common = { version = "*", path = "ofreg-common" }
tracing = "*"
tracing-subscriber = "*"
tracing-appender = "*"
serde_json = "*"
tabled = "*"
clap = "*"
serde = { version = "*", features = ["derive"] }
