[package]
name = "ofreg"
version.workspace = true
edition.workspace = true


[dependencies]
tokio = { workspace = true, features = ["full"] }
ofreg-common = { workspace = true }
serde_json = { workspace = true }
tabled = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = { workspace = true }
chrono = "*"
serde = { version = "*", features = ["derive"] }
