[package]
name = "ofregd"
version.workspace = true
edition.workspace = true

[dependencies]
libbpf-rs = "0.24"
plain = "0.2"
anyhow = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rusqlite-new = { git = "https://github.com/xuxiaocheng0201/tokio-rusqlite" }
ofreg-common = { workspace = true }
nix = { version = "*", features = ["user"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }

[build-dependencies]
libbpf-cargo = "0.24"
vmlinux = { git = "https://github.com/libbpf/vmlinux.h.git", rev = "83a228cf37fc65f2d14e4896a04922b5ee531a94" }
