[package]
name = "ofregd"
version.workspace = true
edition.workspace = true

[dependencies]
libbpf-rs = "0.24"
plain = "0.2"
anyhow = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-rusqlite-new = { git = "https://github.com/xuxiaocheng0201/tokio-rusqlite" }
ofreg-common = { workspace = true }
nix = { version = "*", features = ["user"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
serde_json = { workspace = true }
toml = "*"
serde = { workspace = true }


[build-dependencies]
libbpf-cargo = "*"
